// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AggregatedAccounts /> render AggregatedAccounts empty list 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    justifyContent="flex-start"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
          "paddingBottom": 25,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 25,
        },
      ]
    }
  >
    <View
      mBottom={10}
      mTop={0}
      pBottom={15}
      pLeft={20}
      pRight={20}
      pTop={20}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderColor": "#BFCEDE",
            "borderRadius": 5,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginBottom": 10,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 15,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
          },
        ]
      }
    >
      <Text
        align="left"
        isPrimary={true}
        semiBold={true}
        style={
          Array [
            Object {
              "color": "#003D7C",
              "flexShrink": 1,
              "fontFamily": "Segoe UI",
              "fontSize": 16,
              "fontWeight": "normal",
              "textAlign": "left",
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
              "width": "100%",
            },
          ]
        }
      >
        Total de compte en EUR :
      </Text>
      <Text
        align="left"
        bold={true}
        isError={false}
        isSecondary={true}
        size={24}
        style={
          Array [
            Object {
              "color": "#00A8FF",
              "flexShrink": 1,
              "fontSize": 24,
              "fontWeight": "bold",
              "textAlign": "left",
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
              "width": "100%",
            },
            Object {
              "marginTop": 5,
            },
          ]
        }
      >
        0.00 €
      </Text>
    </View>
    <RCTScrollView
      ListEmptyComponent={
        <Styled(Text)
          bold={true}
          isSecondary={true}
          size={18}
        >
          Aucune compte en cours
        </Styled(Text)>
      }
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
          },
        ]
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <Text
          bold={true}
          isSecondary={true}
          onLayout={[Function]}
          size={18}
          style={
            Array [
              Object {
                "color": "#00A8FF",
                "flexShrink": 1,
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
                "textDecorationColor": "black",
                "textDecorationLine": "none",
                "textDecorationStyle": "solid",
                "textTransform": "none",
                "width": "100%",
              },
            ]
          }
        >
          Aucune compte en cours
        </Text>
      </View>
    </RCTScrollView>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#003D7C",
          "borderRadius": 62,
          "bottom": 22,
          "height": 62,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 22,
          "width": 62,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="none"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M21.308 14.265h-7.87v7.87a1.852 1.852 0 01-3.703 0v-7.87h-7.87a1.852 1.852 0 010-3.704h7.87v-7.87a1.852 1.852 0 013.703 0v7.87h7.87a1.852 1.852 0 010 3.704z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`<AggregatedAccounts /> render AggregatedAccounts full list 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    justifyContent="flex-start"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
          "paddingBottom": 25,
          "paddingLeft": 25,
          "paddingRight": 25,
          "paddingTop": 25,
        },
      ]
    }
  >
    <View
      mBottom={10}
      mTop={0}
      pBottom={15}
      pLeft={20}
      pRight={20}
      pTop={20}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderColor": "#BFCEDE",
            "borderRadius": 5,
            "borderStyle": "solid",
            "borderWidth": 1,
            "marginBottom": 10,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 15,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
          },
        ]
      }
    >
      <Text
        align="left"
        isPrimary={true}
        semiBold={true}
        style={
          Array [
            Object {
              "color": "#003D7C",
              "flexShrink": 1,
              "fontFamily": "Segoe UI",
              "fontSize": 16,
              "fontWeight": "normal",
              "textAlign": "left",
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
              "width": "100%",
            },
          ]
        }
      >
        Total de compte en EUR :
      </Text>
      <Text
        align="left"
        bold={true}
        isError={false}
        isSecondary={true}
        size={24}
        style={
          Array [
            Object {
              "color": "#00A8FF",
              "flexShrink": 1,
              "fontSize": 24,
              "fontWeight": "bold",
              "textAlign": "left",
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
              "width": "100%",
            },
            Object {
              "marginTop": 5,
            },
          ]
        }
      >
        4588.67 €
      </Text>
    </View>
    <RCTScrollView
      ListEmptyComponent={
        <Styled(Text)
          bold={true}
          isSecondary={true}
          size={18}
        >
          Aucune compte en cours
        </Styled(Text)>
      }
      data={
        Array [
          Object {
            "aspsp": Object {
              "icon": "www.google.com",
              "id": "60b8bc549afa7978b064f4a0",
              "name": "Demo Crédit Agricole",
            },
            "balances": Array [
              Object {
                "amount": Object {
                  "currency": "EUR",
                  "value": -0.49,
                },
                "creditDebitIndicator": "DEBIT",
                "type": "OPENING_BOOKED",
              },
            ],
            "cashAccountType": "LOAN",
            "currency": "EUR",
            "ingested": false,
            "lastRefreshDate": "2021-07-05T14:11:40.168582Z",
            "name": "Santander",
            "references": Array [
              Object {
                "id": "7777-333334444444",
                "type": "IBAN",
              },
            ],
            "resourceId": "19340cb5825b4a02a0666476694e78f9",
          },
          Object {
            "aspsp": Object {
              "icon": "www.google.com",
              "id": "60b8bc549afa7978b064f4a0",
              "name": "Demo Crédit Agricole",
            },
            "balances": Array [
              Object {
                "amount": Object {
                  "currency": "EUR",
                  "value": 68.61,
                },
                "creditDebitIndicator": "CREDIT",
                "type": "OPENING_BOOKED",
              },
            ],
            "cashAccountType": "CACC",
            "currency": "EUR",
            "ingested": false,
            "lastRefreshDate": "2021-07-05T14:11:40.168632Z",
            "name": "Checking Account tink 1",
            "references": Array [
              Object {
                "id": "FR1420041010050015664355590",
                "type": "IBAN",
              },
            ],
            "resourceId": "53b64deb297b4c0bb628e8feeadabc7a",
          },
          Object {
            "aspsp": Object {
              "icon": "www.google.com",
              "id": "60b8bc549afa7978b064f4a0",
              "name": "Demo Crédit Agricole",
            },
            "balances": Array [
              Object {
                "amount": Object {
                  "currency": "EUR",
                  "value": 4520.55,
                },
                "creditDebitIndicator": "CREDIT",
                "type": "OPENING_BOOKED",
              },
            ],
            "cashAccountType": "SVGS",
            "currency": "EUR",
            "ingested": false,
            "lastRefreshDate": "2021-07-05T14:11:40.168679Z",
            "name": "Savings Account tink",
            "references": Array [
              Object {
                "id": "FR5620041010050020279279990",
                "type": "IBAN",
              },
            ],
            "resourceId": "57454b41fce9416b8cbfd59677376d67",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
          },
        ]
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            mBottom={0}
            mTop={20}
            pBottom={16}
            pLeft={13}
            pRight={13}
            pTop={20}
            radius={11}
            style={
              Array [
                Object {
                  "backgroundColor": "#F8F8F9",
                  "borderColor": "#BFCEDE",
                  "borderRadius": 11,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 20,
                  "paddingBottom": 16,
                  "paddingLeft": 13,
                  "paddingRight": 13,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginBottom": 8,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "www.google.com",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 24,
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </View>
              <View>
                <Text
                  align="left"
                  bold={true}
                  isPrimary={true}
                  style={
                    Array [
                      Object {
                        "color": "#003D7C",
                        "flexShrink": 1,
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "textAlign": "left",
                        "textDecorationColor": "black",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  Santander
                </Text>
                <Text
                  align="left"
                  bold={true}
                  isError={true}
                  isSecondary={false}
                  style={
                    Array [
                      Object {
                        "color": "#DC3818",
                        "flexShrink": 1,
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "textAlign": "left",
                        "textDecorationColor": "black",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  -0.49 €
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": 18,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "width": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={4}
                  fill="none"
                  focusable={false}
                  height={16}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 4,
                      },
                    ]
                  }
                  vbHeight={16}
                  vbWidth={4}
                  width={4}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M2 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2C.9 6 0 6.9 0 8s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      fill={4278205820}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Modal
                animationType="none"
                hardwareAccelerated={false}
                onRequestClose={[Function]}
                supportedOrientations={
                  Array [
                    "portrait",
                    "portrait-upside-down",
                    "landscape",
                    "landscape-left",
                    "landscape-right",
                  ]
                }
                transparent={true}
                visible={false}
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Array [
                        Object {
                          "backgroundColor": "#00000077",
                          "flex": 1,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "paddingBottom": 0,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  />
                  <View
                    onMoveShouldSetResponder={[Function]}
                    onMoveShouldSetResponderCapture={[Function]}
                    onResponderEnd={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderReject={[Function]}
                    onResponderRelease={[Function]}
                    onResponderStart={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    onStartShouldSetResponderCapture={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "borderTopEndRadius": 20,
                        "borderTopStartRadius": 20,
                        "height": 0,
                        "overflow": "hidden",
                        "transform": Array [
                          Object {
                            "translateX": 0,
                          },
                          Object {
                            "translateY": 0,
                          },
                        ],
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#ccc",
                              "borderRadius": 5,
                              "height": 5,
                              "margin": 10,
                              "width": 35,
                            },
                            Object {
                              "backgroundColor": "#000",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M5 7.184a2 2 0 11-4 0 2 2 0 014 0zM5 14.184a2 2 0 11-4 0 2 2 0 014 0zM5 21.184a2 2 0 11-4 0 2 2 0 014 0zM9 8.184h15a.999.999 0 100-2H9a1 1 0 100 2zM24 13.184H9a1 1 0 100 2h15a1 1 0 100-2zM24 20.184H9a1 1 0 100 2h15a1 1 0 100-2z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Details
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M4.685 7.993h0l-.006.01-.04.075V5.495H3.029V11.037H8.57V9.427H5.71a8.485 8.485 0 017.297-4.352 8.479 8.479 0 018.02 6.038l.042.144.144-.043 1.258-.373.143-.043-.042-.144c-1.57-5.282-7.125-8.291-12.407-6.721a9.978 9.978 0 00-5.48 4.06zM17.591 15.978h-.15V17.588h2.86a8.485 8.485 0 01-7.296 4.352 8.479 8.479 0 01-8.02-6.039l-.043-.143-.143.043-1.258.373-.144.043.043.144c1.576 5.28 7.135 8.282 12.415 6.705a9.978 9.978 0 005.517-4.132v2.585H22.982v-5.541H17.593z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                                "strokeWidth",
                              ]
                            }
                            stroke={4278205820}
                            strokeWidth={0.3}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Actualiser
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M20.935 9.673l-.81 15.085a1.055 1.055 0 01-1.043.992H5.85a1.055 1.055 0 01-1.044-.992l-.81-15.085a1.049 1.049 0 01.993-1.096 1.048 1.048 0 011.096.992l.757 14.093H18.09l.757-14.093a1.049 1.049 0 011.096-.992c.574.026 1.018.522.992 1.096zM23.7 6.176c0 .574-.47 1.044-1.044 1.044H2.3c-.574 0-1.044-.47-1.044-1.044 0-.574.47-1.044 1.044-1.044h5.742V2.783c0-.496.34-.783.835-.783h7.204c.495 0 .835.287.835.783v2.349h5.741c.575 0 1.044.47 1.044 1.044zM9.87 5.132h5.22V3.827h-5.22v1.305zm.444 16.964c.522 0 .913-.496.913-.992l-.26-11.274a.93.93 0 00-.94-.914.893.893 0 00-.888.94l.261 11.3c0 .497.418.94.914.94zm4.306 0a.925.925 0 00.913-.913l.261-11.275c0-.496-.391-.94-.887-.94a.926.926 0 00-.94.888l-.26 11.275a.92.92 0 00.913.965c-.026 0-.026 0 0 0z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Supprimer
                      </Text>
                    </View>
                  </View>
                </View>
              </Modal>
            </View>
            <Text
              align="left"
              bold={true}
              isPrimary={true}
              style={
                Array [
                  Object {
                    "color": "#003D7C",
                    "flexShrink": 1,
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "left",
                    "textDecorationColor": "black",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                    "width": "100%",
                  },
                  Object {
                    "marginBottom": 8,
                  },
                ]
              }
            >
              Loan
            </Text>
            <Text
              align="left"
              isPrimary={true}
              semiBold={true}
              style={
                Array [
                  Object {
                    "color": "#003D7C",
                    "flexShrink": 1,
                    "fontFamily": "Segoe UI",
                    "fontSize": 16,
                    "fontWeight": "normal",
                    "textAlign": "left",
                    "textDecorationColor": "black",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                    "width": "100%",
                  },
                ]
              }
            >
              IBAN
               : 
              <Text
                align="left"
                style={
                  Array [
                    Object {
                      "color": "#4A4848",
                      "flexShrink": 1,
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": "left",
                      "textDecorationColor": "black",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                      "width": "100%",
                    },
                  ]
                }
              >
                7777-333334444444
              </Text>
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            mBottom={0}
            mTop={20}
            pBottom={16}
            pLeft={13}
            pRight={13}
            pTop={20}
            radius={11}
            style={
              Array [
                Object {
                  "backgroundColor": "#F8F8F9",
                  "borderColor": "#BFCEDE",
                  "borderRadius": 11,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 20,
                  "paddingBottom": 16,
                  "paddingLeft": 13,
                  "paddingRight": 13,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginBottom": 8,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "www.google.com",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 24,
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </View>
              <View>
                <Text
                  align="left"
                  bold={true}
                  isPrimary={true}
                  style={
                    Array [
                      Object {
                        "color": "#003D7C",
                        "flexShrink": 1,
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "textAlign": "left",
                        "textDecorationColor": "black",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  Checking Account tink 1
                </Text>
                <Text
                  align="left"
                  bold={true}
                  isError={false}
                  isSecondary={true}
                  style={
                    Array [
                      Object {
                        "color": "#00A8FF",
                        "flexShrink": 1,
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "textAlign": "left",
                        "textDecorationColor": "black",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  68.61 €
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": 18,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "width": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={4}
                  fill="none"
                  focusable={false}
                  height={16}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 4,
                      },
                    ]
                  }
                  vbHeight={16}
                  vbWidth={4}
                  width={4}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M2 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2C.9 6 0 6.9 0 8s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      fill={4278205820}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Modal
                animationType="none"
                hardwareAccelerated={false}
                onRequestClose={[Function]}
                supportedOrientations={
                  Array [
                    "portrait",
                    "portrait-upside-down",
                    "landscape",
                    "landscape-left",
                    "landscape-right",
                  ]
                }
                transparent={true}
                visible={false}
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Array [
                        Object {
                          "backgroundColor": "#00000077",
                          "flex": 1,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "paddingBottom": 0,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  />
                  <View
                    onMoveShouldSetResponder={[Function]}
                    onMoveShouldSetResponderCapture={[Function]}
                    onResponderEnd={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderReject={[Function]}
                    onResponderRelease={[Function]}
                    onResponderStart={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    onStartShouldSetResponderCapture={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "borderTopEndRadius": 20,
                        "borderTopStartRadius": 20,
                        "height": 0,
                        "overflow": "hidden",
                        "transform": Array [
                          Object {
                            "translateX": 0,
                          },
                          Object {
                            "translateY": 0,
                          },
                        ],
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#ccc",
                              "borderRadius": 5,
                              "height": 5,
                              "margin": 10,
                              "width": 35,
                            },
                            Object {
                              "backgroundColor": "#000",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M5 7.184a2 2 0 11-4 0 2 2 0 014 0zM5 14.184a2 2 0 11-4 0 2 2 0 014 0zM5 21.184a2 2 0 11-4 0 2 2 0 014 0zM9 8.184h15a.999.999 0 100-2H9a1 1 0 100 2zM24 13.184H9a1 1 0 100 2h15a1 1 0 100-2zM24 20.184H9a1 1 0 100 2h15a1 1 0 100-2z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Details
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M4.685 7.993h0l-.006.01-.04.075V5.495H3.029V11.037H8.57V9.427H5.71a8.485 8.485 0 017.297-4.352 8.479 8.479 0 018.02 6.038l.042.144.144-.043 1.258-.373.143-.043-.042-.144c-1.57-5.282-7.125-8.291-12.407-6.721a9.978 9.978 0 00-5.48 4.06zM17.591 15.978h-.15V17.588h2.86a8.485 8.485 0 01-7.296 4.352 8.479 8.479 0 01-8.02-6.039l-.043-.143-.143.043-1.258.373-.144.043.043.144c1.576 5.28 7.135 8.282 12.415 6.705a9.978 9.978 0 005.517-4.132v2.585H22.982v-5.541H17.593z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                                "strokeWidth",
                              ]
                            }
                            stroke={4278205820}
                            strokeWidth={0.3}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Actualiser
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M20.935 9.673l-.81 15.085a1.055 1.055 0 01-1.043.992H5.85a1.055 1.055 0 01-1.044-.992l-.81-15.085a1.049 1.049 0 01.993-1.096 1.048 1.048 0 011.096.992l.757 14.093H18.09l.757-14.093a1.049 1.049 0 011.096-.992c.574.026 1.018.522.992 1.096zM23.7 6.176c0 .574-.47 1.044-1.044 1.044H2.3c-.574 0-1.044-.47-1.044-1.044 0-.574.47-1.044 1.044-1.044h5.742V2.783c0-.496.34-.783.835-.783h7.204c.495 0 .835.287.835.783v2.349h5.741c.575 0 1.044.47 1.044 1.044zM9.87 5.132h5.22V3.827h-5.22v1.305zm.444 16.964c.522 0 .913-.496.913-.992l-.26-11.274a.93.93 0 00-.94-.914.893.893 0 00-.888.94l.261 11.3c0 .497.418.94.914.94zm4.306 0a.925.925 0 00.913-.913l.261-11.275c0-.496-.391-.94-.887-.94a.926.926 0 00-.94.888l-.26 11.275a.92.92 0 00.913.965c-.026 0-.026 0 0 0z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Supprimer
                      </Text>
                    </View>
                  </View>
                </View>
              </Modal>
            </View>
            <Text
              align="left"
              bold={true}
              isPrimary={true}
              style={
                Array [
                  Object {
                    "color": "#003D7C",
                    "flexShrink": 1,
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "left",
                    "textDecorationColor": "black",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                    "width": "100%",
                  },
                  Object {
                    "marginBottom": 8,
                  },
                ]
              }
            >
              Compte courant
            </Text>
            <Text
              align="left"
              isPrimary={true}
              semiBold={true}
              style={
                Array [
                  Object {
                    "color": "#003D7C",
                    "flexShrink": 1,
                    "fontFamily": "Segoe UI",
                    "fontSize": 16,
                    "fontWeight": "normal",
                    "textAlign": "left",
                    "textDecorationColor": "black",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                    "width": "100%",
                  },
                ]
              }
            >
              IBAN
               : 
              <Text
                align="left"
                style={
                  Array [
                    Object {
                      "color": "#4A4848",
                      "flexShrink": 1,
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": "left",
                      "textDecorationColor": "black",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                      "width": "100%",
                    },
                  ]
                }
              >
                FR1420041010050015664355590
              </Text>
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            mBottom={0}
            mTop={20}
            pBottom={16}
            pLeft={13}
            pRight={13}
            pTop={20}
            radius={11}
            style={
              Array [
                Object {
                  "backgroundColor": "#F8F8F9",
                  "borderColor": "#BFCEDE",
                  "borderRadius": 11,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 20,
                  "paddingBottom": 16,
                  "paddingLeft": 13,
                  "paddingRight": 13,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "marginBottom": 8,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "www.google.com",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 24,
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </View>
              <View>
                <Text
                  align="left"
                  bold={true}
                  isPrimary={true}
                  style={
                    Array [
                      Object {
                        "color": "#003D7C",
                        "flexShrink": 1,
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "textAlign": "left",
                        "textDecorationColor": "black",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  Savings Account tink
                </Text>
                <Text
                  align="left"
                  bold={true}
                  isError={false}
                  isSecondary={true}
                  style={
                    Array [
                      Object {
                        "color": "#00A8FF",
                        "flexShrink": 1,
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "textAlign": "left",
                        "textDecorationColor": "black",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  4520.55 €
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "height": 18,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "width": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={4}
                  fill="none"
                  focusable={false}
                  height={16}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 4,
                      },
                    ]
                  }
                  vbHeight={16}
                  vbWidth={4}
                  width={4}
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M2 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2C.9 6 0 6.9 0 8s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      fill={4278205820}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Modal
                animationType="none"
                hardwareAccelerated={false}
                onRequestClose={[Function]}
                supportedOrientations={
                  Array [
                    "portrait",
                    "portrait-upside-down",
                    "landscape",
                    "landscape-left",
                    "landscape-right",
                  ]
                }
                transparent={true}
                visible={false}
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Array [
                        Object {
                          "backgroundColor": "#00000077",
                          "flex": 1,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "paddingBottom": 0,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  />
                  <View
                    onMoveShouldSetResponder={[Function]}
                    onMoveShouldSetResponderCapture={[Function]}
                    onResponderEnd={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderReject={[Function]}
                    onResponderRelease={[Function]}
                    onResponderStart={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    onStartShouldSetResponderCapture={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "borderTopEndRadius": 20,
                        "borderTopStartRadius": 20,
                        "height": 0,
                        "overflow": "hidden",
                        "transform": Array [
                          Object {
                            "translateX": 0,
                          },
                          Object {
                            "translateY": 0,
                          },
                        ],
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#ccc",
                              "borderRadius": 5,
                              "height": 5,
                              "margin": 10,
                              "width": 35,
                            },
                            Object {
                              "backgroundColor": "#000",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M5 7.184a2 2 0 11-4 0 2 2 0 014 0zM5 14.184a2 2 0 11-4 0 2 2 0 014 0zM5 21.184a2 2 0 11-4 0 2 2 0 014 0zM9 8.184h15a.999.999 0 100-2H9a1 1 0 100 2zM24 13.184H9a1 1 0 100 2h15a1 1 0 100-2zM24 20.184H9a1 1 0 100 2h15a1 1 0 100-2z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Details
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M4.685 7.993h0l-.006.01-.04.075V5.495H3.029V11.037H8.57V9.427H5.71a8.485 8.485 0 017.297-4.352 8.479 8.479 0 018.02 6.038l.042.144.144-.043 1.258-.373.143-.043-.042-.144c-1.57-5.282-7.125-8.291-12.407-6.721a9.978 9.978 0 00-5.48 4.06zM17.591 15.978h-.15V17.588h2.86a8.485 8.485 0 01-7.296 4.352 8.479 8.479 0 01-8.02-6.039l-.043-.143-.143.043-1.258.373-.144.043.043.144c1.576 5.28 7.135 8.282 12.415 6.705a9.978 9.978 0 005.517-4.132v2.585H22.982v-5.541H17.593z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                                "stroke",
                                "strokeWidth",
                              ]
                            }
                            stroke={4278205820}
                            strokeWidth={0.3}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Actualiser
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexBasis": 0,
                            "flexDirection": "row",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "marginLeft": 30,
                            "marginTop": 10,
                            "maxHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight={27}
                        bbWidth={26}
                        fill="none"
                        focusable={false}
                        height={27}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          Array [
                            Object {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            Object {
                              "flex": 0,
                              "height": 27,
                              "width": 26,
                            },
                          ]
                        }
                        vbHeight={27}
                        vbWidth={26}
                        width={26}
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M20.935 9.673l-.81 15.085a1.055 1.055 0 01-1.043.992H5.85a1.055 1.055 0 01-1.044-.992l-.81-15.085a1.049 1.049 0 01.993-1.096 1.048 1.048 0 011.096.992l.757 14.093H18.09l.757-14.093a1.049 1.049 0 011.096-.992c.574.026 1.018.522.992 1.096zM23.7 6.176c0 .574-.47 1.044-1.044 1.044H2.3c-.574 0-1.044-.47-1.044-1.044 0-.574.47-1.044 1.044-1.044h5.742V2.783c0-.496.34-.783.835-.783h7.204c.495 0 .835.287.835.783v2.349h5.741c.575 0 1.044.47 1.044 1.044zM9.87 5.132h5.22V3.827h-5.22v1.305zm.444 16.964c.522 0 .913-.496.913-.992l-.26-11.274a.93.93 0 00-.94-.914.893.893 0 00-.888.94l.261 11.3c0 .497.418.94.914.94zm4.306 0a.925.925 0 00.913-.913l.261-11.275c0-.496-.391-.94-.887-.94a.926.926 0 00-.94.888l-.26 11.275a.92.92 0 00.913.965c-.026 0-.026 0 0 0z"
                            fill={4278205820}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        isPrimary={true}
                        size={21}
                        style={
                          Array [
                            Object {
                              "color": "#003D7C",
                              "flexShrink": 1,
                              "fontSize": 21,
                              "fontWeight": "normal",
                              "textAlign": "center",
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "textTransform": "none",
                              "width": "100%",
                            },
                            Object {
                              "marginLeft": 10,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Supprimer
                      </Text>
                    </View>
                  </View>
                </View>
              </Modal>
            </View>
            <Text
              align="left"
              bold={true}
              isPrimary={true}
              style={
                Array [
                  Object {
                    "color": "#003D7C",
                    "flexShrink": 1,
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "left",
                    "textDecorationColor": "black",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                    "width": "100%",
                  },
                  Object {
                    "marginBottom": 8,
                  },
                ]
              }
            >
              Compte épargne
            </Text>
            <Text
              align="left"
              isPrimary={true}
              semiBold={true}
              style={
                Array [
                  Object {
                    "color": "#003D7C",
                    "flexShrink": 1,
                    "fontFamily": "Segoe UI",
                    "fontSize": 16,
                    "fontWeight": "normal",
                    "textAlign": "left",
                    "textDecorationColor": "black",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                    "width": "100%",
                  },
                ]
              }
            >
              IBAN
               : 
              <Text
                align="left"
                style={
                  Array [
                    Object {
                      "color": "#4A4848",
                      "flexShrink": 1,
                      "fontSize": 16,
                      "fontWeight": "normal",
                      "textAlign": "left",
                      "textDecorationColor": "black",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                      "width": "100%",
                    },
                  ]
                }
              >
                FR5620041010050020279279990
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#003D7C",
          "borderRadius": 62,
          "bottom": 22,
          "height": 62,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 22,
          "width": 62,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="none"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M21.308 14.265h-7.87v7.87a1.852 1.852 0 01-3.703 0v-7.87h-7.87a1.852 1.852 0 010-3.704h7.87v-7.87a1.852 1.852 0 013.703 0v7.87h7.87a1.852 1.852 0 010 3.704z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
